2025-11-07T01:23:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19155158783 # 801
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-07
* notice: last 14d: unq all: 5 5
* notice: prev accum: outdated-unq outdated-all / unq all: 970 1450 / 976 1456
* notice: next accum: outdated-unq outdated-all / unq all: 971 1451 / 976 1456
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-23] / []

2025-11-06T01:24:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19121729369 # 800
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-06
* notice: last 14d: unq all: 6 6
* notice: prev accum: outdated-unq outdated-all / unq all: 956 1435 / 970 1450
* notice: next accum: outdated-unq outdated-all / unq all: 970 1450 / 976 1456
* notice: prev exec diff / last date diff / accum: unq all: +6 +6 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-10-05 2025-10-06 2025-10-08 2025-10-09 2025-10-10 2025-10-11 2025-10-12 2025-10-13 2025-10-14 2025-10-15 2025-10-16] / [2025-10-23 2025-10-25 2025-10-28 2025-10-31 2025-11-03]

2025-10-17T00:51:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18578990488 # 799
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-17
* notice: last 14d: unq all: 6 15
* notice: prev accum: outdated-unq outdated-all / unq all: 955 1434 / 968 1448
* notice: next accum: outdated-unq outdated-all / unq all: 956 1435 / 970 1450
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2