@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-07T01:23:51Z",
-  "count_outdated" : 1451,
-  "uniques_outdated" : 971,
+  "timestamp" : "2025-11-09T01:27:12Z",
+  "count_outdated" : 1453,
+  "uniques_outdated" : 973,
   "count" : 1456,
   "uniques" : 976,
   "clones" : [
-    {
-      "timestamp": "2025-10-25T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-10-28T00:00:00Z",
       "count": 1,
