@@ -1,3 +1,12 @@
+2025-11-09T01:27:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19201378447 # 803
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-09
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 971 1451 / 976 1456
+* notice: next accum: outdated-unq outdated-all / unq all: 973 1453 / 976 1456
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-10-25] / []
+
 2025-11-07T01:23:51Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19155158783 # 801
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-07
